--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "react-scripts": "^1.1.4"
